# use-cmake

./: .gitignore  untest
demo1/: CMakeCache.txt  Demo  Makefile  cmake_install.cmake  main.cc
demo2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo  main.cc
demo3/: CMakeLists.txt  main.cc
demo3/math/: CMakeLists.txt
demo4/: CMakeCache.txt  CMakeLists.txt  main.cc
demo5/: CMakeLists.txt
demo5/math/: CMakeLists.txt  math.cc
demo6/: CMakeLists.txt  config.h.in  main.cc
demo6/math/: CMakeLists.txt
